# mirage-platform

./: Makefile  mirage-solo5-ocaml.opam  mirage-solo5-posix.opam  mirage-solo5.opam
lib/: time.ml
solo5-ocaml/: build.sh  install.sh  mirage-solo5-ocaml.pc  uninstall.sh
solo5-posix/: Makefile  build.sh  install.sh  mirage-solo5-posix.pc  uninstall.sh
solo5-posix/include/: ctype.h  signal.h  stdio.h  string.h  time.h  unistd.h
solo5-posix/include/sys/: stat.h  types.h
solo5-posix/src/: fmt_fp.c  mini_libc.c
