opam-version: "1.2"
maintainer:   "anil@recoil.org"
authors:      "The MirageOS team"
homepage:     "https://github.com/mirage/mirage-platform"
bug-reports:  "https://github.com/mirage/mirage-platform/issues/"
dev-repo:     "https://github.com/mirage/mirage-platform.git"

build:   [make "solo5-ocaml-build"]
install: [make "solo5-ocaml-install" "PREFIX=%{prefix}%"]
remove:  [make "solo5-ocaml-uninstall" "PREFIX=%{prefix}%"]

depends: [
  "mirage-solo5-posix"
  "conf-pkg-config"
  "ocaml-src"
]
available: [ ocaml-version >= "4.01.0" & os = "linux" ]
