opam-version: "1.2"
maintainer:   "anil@recoil.org"
authors:      "The MirageOS team"
homepage:     "https://github.com/mirage/mirage-platform"
bug-reports:  "https://github.com/mirage/mirage-platform/issues/"
dev-repo:     "https://github.com/mirage/mirage-platform.git"
license:      "part ISC, part LBPL-2.1 with OCaml linking ecxeption, part 3-clause BSD"

build:   [make "solo5-build"]
install: [make "solo5-install"   "PREFIX=%{prefix}%"]
remove:  [make "solo5-uninstall" "PREFIX=%{prefix}%"]

depends: [
  "cstruct" {>= "1.0.1"}
  "ocamlfind"
  "io-page" {>= "1.5.0"}
  "mirage-clock-xen" {>= "1.0.0"}
  "lwt" {>= "2.4.3"}
  "xenstore" {>= "1.2.5"}
  "xen-evtchn" {>= "0.9.9"}
  "conf-pkg-config"
  "solo5-kernel-ukvm"
  "mirage-solo5-ocaml"
  "mirage-solo5-posix"
]
available: [ ocaml-version >= "4.01.0" & os = "linux" ]
